--- a/src/assets/styles/font.css
+++ b/src/assets/styles/font.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "Source Code Pro";
   font-weight: 400;
@@ -24,7 +23,7 @@
   font-family: "Source Code Pro";
   font-weight: 700;
   font-style: italic;
-    src: url("./fonts/SourceCodePro/SourceCodePro-BoldItalic.ttf") format("ttf");
+  src: url("./fonts/SourceCodePro/SourceCodePro-BoldItalic.ttf") format("ttf");
 }
 
 @font-face {
@@ -60,7 +59,8 @@
   font-family: "Noto Sans SC";
   font-weight: 500;
   font-style: normal;
-  src: url("./fonts/NotoSansSc/NotoSans_SemiCondensed-SemiBold.ttf") format("ttf");
+  src: url("./fonts/NotoSansSc/NotoSans_SemiCondensed-SemiBold.ttf")
+    format("ttf");
 }
 
 @font-face {
