--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,7 +2,8 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, "Noto Sans SC", "Source Code Pro", sans-serif, Helvetica;
+  font-family:
+    -apple-system, "Noto Sans SC", "Source Code Pro", sans-serif, Helvetica;
   -webkit-font-smoothing: antialiased;
 
   user-select: none;
@@ -16,8 +17,9 @@ body {
   --text-primary: #1f1f1f;
   --selection-color: #f5f5f5;
   --scroller-color: #8c8c8c;
-  --background-color: #f5f5f5;
+  --background-color: #fff;
   --background-color-alpha: rgba(24, 103, 192, 0.1);
+  --divider-color: rgba(5, 5, 5, 0.06);
   --border-radius: 8px;
 
   font-size: 16px;
@@ -25,7 +27,6 @@ body {
   font-weight: 400;
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
