--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,8 +1,14 @@
 @import "./font.css";
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scroller-thumb) var(--scroller-track);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, "Noto Sans SC", "Source Code Pro", sans-serif, Helvetica;
+  font-family:
+    -apple-system, "Noto Sans SC", "Source Code Pro", sans-serif, Helvetica;
   -webkit-font-smoothing: antialiased;
 
   user-select: none;
@@ -15,17 +21,19 @@ body {
   --primary-main: #2e8555;
   --text-primary: #1f1f1f;
   --selection-color: #f5f5f5;
-  --scroller-color: #8c8c8c;
-  --background-color: #f5f5f5;
+  --scroller-thumb: rgba(0, 0, 0, 0.3);
+  --scroller-track: transparent;
+  --background-color: #fff;
   --background-color-alpha: rgba(24, 103, 192, 0.1);
+  --divider-color: rgba(5, 5, 5, 0.06);
   --border-radius: 8px;
+  --sidebar-width: 222px;
 
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -46,9 +54,14 @@ body {
   height: 8px;
   background: transparent;
 }
+
 *::-webkit-scrollbar-thumb {
   border-radius: 6px;
-  background-color: var(--scroller-color);
+  background-color: var(--scroller-thumb);
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--scroller-track);
 }
 *::-webkit-scrollbar-corner {
   background-color: transparent;
