delete font and network online import

--- a/src/assets/styles/font.css
+++ b/src/assets/styles/font.css
@@ -1,88 +1,2 @@
-@font-face {
-  font-family: "Source Code Pro";
-  font-weight: 400;
-  font-style: normal;
-  src: url("../fonts/SourceCodePro/SourceCodePro-Regular.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Source Code Pro";
-  font-weight: 700;
-  font-style: normal;
-  src: url("../fonts/SourceCodePro/SourceCodePro-Bold.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Source Code Pro";
-  font-weight: 400;
-  font-style: italic;
-  src: url("../fonts/SourceCodePro/SourceCodePro-Italic.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Source Code Pro";
-  font-weight: 700;
-  font-style: italic;
-  src: url("../fonts/SourceCodePro/SourceCodePro-BoldItalic.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 300;
-  font-style: normal;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-Light.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 300;
-  font-style: italic;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-LightItalic.ttf")
-    format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 400;
-  font-style: normal;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-Regular.ttf")
-    format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 400;
-  font-style: italic;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-Italic.ttf")
-    format("ttf");
-}
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 500;
-  font-style: normal;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-SemiBold.ttf")
-    format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 500;
-  font-style: italic;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-SemiBoldItalic.ttf")
-    format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 700;
-  font-style: normal;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-Bold.ttf") format("ttf");
-}
-
-@font-face {
-  font-family: "Noto Sans SC";
-  font-weight: 700;
-  font-style: italic;
-  src: url("../fonts/NotoSansSc/NotoSans_SemiCondensed-BoldItalic.ttf")
-    format("ttf");
-}
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;700&family=Noto+Sans+SC:wght@400;700&display=swap");
